{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 46,
  "lineage": "4dfe604c-406a-b21e-7c96-40ccf20c3bf2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gabs-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:internet-gateway/igw-02334d76a75959006",
            "id": "igw-02334d76a75959006",
            "owner_id": "854784635089",
            "tags": {
              "Name": "POC-igw"
            },
            "tags_all": {
              "Name": "POC-igw"
            },
            "vpc_id": "vpc-05900076fa47a1ff0"
          },
          "dependencies": [
            "aws_vpc.gabs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gabs-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:route-table/rtb-02fb764371386107e",
            "id": "rtb-02fb764371386107e",
            "owner_id": "854784635089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02334d76a75959006",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "POC-rtb"
            },
            "tags_all": {
              "Name": "POC-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05900076fa47a1ff0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gabs-igw",
            "aws_vpc.gabs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gabs-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f752a24da56a166",
            "route_table_id": "rtb-02fb764371386107e",
            "subnet_id": "subnet-0e95f22b2129de777"
          },
          "dependencies": [
            "aws_internet_gateway.gabs-igw",
            "aws_route_table.gabs-rtb",
            "aws_subnet.subnets",
            "aws_vpc.gabs-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca95b24c2db6b248",
            "route_table_id": "rtb-02fb764371386107e",
            "subnet_id": "subnet-0f7622267eba1d5e1"
          },
          "dependencies": [
            "aws_internet_gateway.gabs-igw",
            "aws_route_table.gabs-rtb",
            "aws_subnet.subnets",
            "aws_vpc.gabs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:security-group/sg-04aa0a6f1987ee4ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04aa0a6f1987ee4ce",
            "ingress": [],
            "name": "terraform-20231110132158959500000001",
            "name_prefix": "terraform-",
            "owner_id": "854784635089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "POC-sg"
            },
            "tags_all": {
              "Name": "POC-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05900076fa47a1ff0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gabs-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:subnet/subnet-0e95f22b2129de777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e95f22b2129de777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854784635089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-subnet-0"
            },
            "tags_all": {
              "Name": "POC-subnet-0"
            },
            "vpc_id": "vpc-05900076fa47a1ff0"
          },
          "dependencies": [
            "aws_vpc.gabs-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:subnet/subnet-0f7622267eba1d5e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7622267eba1d5e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "854784635089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC-subnet-1"
            },
            "tags_all": {
              "Name": "POC-subnet-1"
            },
            "vpc_id": "vpc-05900076fa47a1ff0"
          },
          "dependencies": [
            "aws_vpc.gabs-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gabs-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:854784635089:vpc/vpc-05900076fa47a1ff0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028414079a5604c5d",
            "default_route_table_id": "rtb-099d2847f9cc285b6",
            "default_security_group_id": "sg-09d0a24bdae961e05",
            "dhcp_options_id": "dopt-0adff709744ab7e09",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05900076fa47a1ff0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099d2847f9cc285b6",
            "owner_id": "854784635089",
            "tags": {
              "Name": "POC-vpc"
            },
            "tags_all": {
              "Name": "POC-vpc"
            }
          }
        }
      ]
    }
  ]
}